// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component Renders Card with full styling 1`] = `
.c0 {
  width: 100%;
  border-top: 4px solid #A42824;
  background-color: #FFFFFF;
  border-radius: 0 0 10px 10px;
}

.c1 {
  padding: 1rem 1rem 0.5rem;
  border-bottom: 1px solid #DA342F;
  display: block;
}

.c1 > h2 {
  margin: 0;
  color: #A42824;
}

.c3 {
  padding: 0;
}

.c4 {
  background-color: rgba(11,70,107,0.4);
  border-radius: 0 0 10px 10px;
  padding: 0.5rem 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: wrap row-reverse;
  -ms-flex-flow: wrap row-reverse;
  flex-flow: wrap row-reverse;
}

.c2 {
  overflow: hidden;
  -webkit-transition: max-height 0.25s ease-in-out;
  transition: max-height 0.25s ease-in-out;
  max-height: 125rem;
}

<Card
  footer="this is the foot"
  title="fooBar"
>
  <CardContainer
    theme={
      Object {
        "action": Object {
          "dark": Object {
            "RGB": "79,38,98",
            "hex": "#4E2662",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "173,101,207",
            "hex": "#AD65CF",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "116,60,143",
            "hex": "#743C8F",
            "on": "#FFFFFF",
          },
        },
        "background": Object {
          "RGB": "246,246,246",
          "hex": "#F6F6F6",
        },
        "black": Object {
          "main": Object {
            "RGB": "39,39,39",
            "hex": "#272727",
            "on": "#FFFFFF",
          },
          "tint20": Object {
            "RGB": "236,236,236",
            "hex": "#ECECEC",
            "on": "#272727",
          },
          "tint40": Object {
            "RGB": "199,199,199",
            "hex": "#C7C7C7",
            "on": "#272727",
          },
          "tint60": Object {
            "RGB": "160,160,160",
            "hex": "#A0A0A0",
            "on": "#FFFFFF",
          },
          "tint80": Object {
            "RGB": "105,105,105",
            "hex": "#696969",
            "on": "#FFFFFF",
          },
        },
        "complimentary": Object {
          "dark": Object {
            "RGB": "206,185,0",
            "hex": "#CEB900",
            "on": "#272727",
          },
          "light": Object {
            "RGB": "255,245,157",
            "hex": "#FFF59D",
            "on": "#272727",
          },
          "main": Object {
            "RGB": "255,238,82",
            "hex": "#FFEE52",
            "on": "#272727",
          },
        },
        "error": Object {
          "dark": Object {
            "RGB": "197,73,1",
            "hex": "#C54901",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "255,115,32",
            "hex": "#FF7320",
            "on": "#FFFFFF",
          },
        },
        "primary": Object {
          "dark": Object {
            "RGB": "102,22,20",
            "hex": "#661614",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "218,52,47",
            "hex": "#DA342F",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "164,40,36",
            "hex": "#A42824",
            "on": "#FFFFFF",
          },
        },
        "secondary": Object {
          "dark": Object {
            "RGB": "5,38,59",
            "hex": "#05263B",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "89,156,175",
            "hex": "#599CAF",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "11,70,107",
            "hex": "#0B466B",
            "on": "#FFFFFF",
          },
        },
        "surface": Object {
          "RGB": "255,255,255",
          "hex": "#FFFFFF",
          "on": "#272727",
        },
        "white": Object {
          "RGB": "255,255,255",
          "hex": "#FFFFFF",
          "on": "#272727",
        },
      }
    }
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "_foldedDefaultProps": Object {
            "theme": Object {
              "action": Object {
                "dark": Object {
                  "RGB": "79,38,98",
                  "hex": "#4E2662",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "173,101,207",
                  "hex": "#AD65CF",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "116,60,143",
                  "hex": "#743C8F",
                  "on": "#FFFFFF",
                },
              },
              "background": Object {
                "RGB": "246,246,246",
                "hex": "#F6F6F6",
              },
              "black": Object {
                "main": Object {
                  "RGB": "39,39,39",
                  "hex": "#272727",
                  "on": "#FFFFFF",
                },
                "tint20": Object {
                  "RGB": "236,236,236",
                  "hex": "#ECECEC",
                  "on": "#272727",
                },
                "tint40": Object {
                  "RGB": "199,199,199",
                  "hex": "#C7C7C7",
                  "on": "#272727",
                },
                "tint60": Object {
                  "RGB": "160,160,160",
                  "hex": "#A0A0A0",
                  "on": "#FFFFFF",
                },
                "tint80": Object {
                  "RGB": "105,105,105",
                  "hex": "#696969",
                  "on": "#FFFFFF",
                },
              },
              "complimentary": Object {
                "dark": Object {
                  "RGB": "206,185,0",
                  "hex": "#CEB900",
                  "on": "#272727",
                },
                "light": Object {
                  "RGB": "255,245,157",
                  "hex": "#FFF59D",
                  "on": "#272727",
                },
                "main": Object {
                  "RGB": "255,238,82",
                  "hex": "#FFEE52",
                  "on": "#272727",
                },
              },
              "error": Object {
                "dark": Object {
                  "RGB": "197,73,1",
                  "hex": "#C54901",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "255,115,32",
                  "hex": "#FF7320",
                  "on": "#FFFFFF",
                },
              },
              "primary": Object {
                "dark": Object {
                  "RGB": "102,22,20",
                  "hex": "#661614",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "218,52,47",
                  "hex": "#DA342F",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "164,40,36",
                  "hex": "#A42824",
                  "on": "#FFFFFF",
                },
              },
              "secondary": Object {
                "dark": Object {
                  "RGB": "5,38,59",
                  "hex": "#05263B",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "89,156,175",
                  "hex": "#599CAF",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "11,70,107",
                  "hex": "#0B466B",
                  "on": "#FFFFFF",
                },
              },
              "surface": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
              "white": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
            },
          },
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Card__CardContainer-sc-100tkmv-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "width:100%;border-top:4px solid ",
              [Function],
              ";background-color:",
              [Function],
              ";box-shadow:",
              [Function],
              ";border-radius:",
              [Function],
              ";",
            ],
          },
          "displayName": "CardContainer",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Card__CardContainer-sc-100tkmv-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      theme={
        Object {
          "action": Object {
            "dark": Object {
              "RGB": "79,38,98",
              "hex": "#4E2662",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "173,101,207",
              "hex": "#AD65CF",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "116,60,143",
              "hex": "#743C8F",
              "on": "#FFFFFF",
            },
          },
          "background": Object {
            "RGB": "246,246,246",
            "hex": "#F6F6F6",
          },
          "black": Object {
            "main": Object {
              "RGB": "39,39,39",
              "hex": "#272727",
              "on": "#FFFFFF",
            },
            "tint20": Object {
              "RGB": "236,236,236",
              "hex": "#ECECEC",
              "on": "#272727",
            },
            "tint40": Object {
              "RGB": "199,199,199",
              "hex": "#C7C7C7",
              "on": "#272727",
            },
            "tint60": Object {
              "RGB": "160,160,160",
              "hex": "#A0A0A0",
              "on": "#FFFFFF",
            },
            "tint80": Object {
              "RGB": "105,105,105",
              "hex": "#696969",
              "on": "#FFFFFF",
            },
          },
          "complimentary": Object {
            "dark": Object {
              "RGB": "206,185,0",
              "hex": "#CEB900",
              "on": "#272727",
            },
            "light": Object {
              "RGB": "255,245,157",
              "hex": "#FFF59D",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "255,238,82",
              "hex": "#FFEE52",
              "on": "#272727",
            },
          },
          "error": Object {
            "dark": Object {
              "RGB": "197,73,1",
              "hex": "#C54901",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "255,115,32",
              "hex": "#FF7320",
              "on": "#FFFFFF",
            },
          },
          "primary": Object {
            "dark": Object {
              "RGB": "102,22,20",
              "hex": "#661614",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "218,52,47",
              "hex": "#DA342F",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "164,40,36",
              "hex": "#A42824",
              "on": "#FFFFFF",
            },
          },
          "secondary": Object {
            "dark": Object {
              "RGB": "5,38,59",
              "hex": "#05263B",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "89,156,175",
              "hex": "#599CAF",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "11,70,107",
              "hex": "#0B466B",
              "on": "#FFFFFF",
            },
          },
          "surface": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
          "white": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
        }
      }
    >
      <div
        className="c0"
      >
        <CardHeader
          className="Card__CardHeader"
          theme={
            Object {
              "action": Object {
                "dark": Object {
                  "RGB": "79,38,98",
                  "hex": "#4E2662",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "173,101,207",
                  "hex": "#AD65CF",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "116,60,143",
                  "hex": "#743C8F",
                  "on": "#FFFFFF",
                },
              },
              "background": Object {
                "RGB": "246,246,246",
                "hex": "#F6F6F6",
              },
              "black": Object {
                "main": Object {
                  "RGB": "39,39,39",
                  "hex": "#272727",
                  "on": "#FFFFFF",
                },
                "tint20": Object {
                  "RGB": "236,236,236",
                  "hex": "#ECECEC",
                  "on": "#272727",
                },
                "tint40": Object {
                  "RGB": "199,199,199",
                  "hex": "#C7C7C7",
                  "on": "#272727",
                },
                "tint60": Object {
                  "RGB": "160,160,160",
                  "hex": "#A0A0A0",
                  "on": "#FFFFFF",
                },
                "tint80": Object {
                  "RGB": "105,105,105",
                  "hex": "#696969",
                  "on": "#FFFFFF",
                },
              },
              "complimentary": Object {
                "dark": Object {
                  "RGB": "206,185,0",
                  "hex": "#CEB900",
                  "on": "#272727",
                },
                "light": Object {
                  "RGB": "255,245,157",
                  "hex": "#FFF59D",
                  "on": "#272727",
                },
                "main": Object {
                  "RGB": "255,238,82",
                  "hex": "#FFEE52",
                  "on": "#272727",
                },
              },
              "error": Object {
                "dark": Object {
                  "RGB": "197,73,1",
                  "hex": "#C54901",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "255,115,32",
                  "hex": "#FF7320",
                  "on": "#FFFFFF",
                },
              },
              "primary": Object {
                "dark": Object {
                  "RGB": "102,22,20",
                  "hex": "#661614",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "218,52,47",
                  "hex": "#DA342F",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "164,40,36",
                  "hex": "#A42824",
                  "on": "#FFFFFF",
                },
              },
              "secondary": Object {
                "dark": Object {
                  "RGB": "5,38,59",
                  "hex": "#05263B",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "89,156,175",
                  "hex": "#599CAF",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "11,70,107",
                  "hex": "#0B466B",
                  "on": "#FFFFFF",
                },
              },
              "surface": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
              "white": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
            }
          }
        >
          <StyledComponent
            className="Card__CardHeader"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "_foldedDefaultProps": Object {
                  "theme": Object {
                    "action": Object {
                      "dark": Object {
                        "RGB": "79,38,98",
                        "hex": "#4E2662",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "173,101,207",
                        "hex": "#AD65CF",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "116,60,143",
                        "hex": "#743C8F",
                        "on": "#FFFFFF",
                      },
                    },
                    "background": Object {
                      "RGB": "246,246,246",
                      "hex": "#F6F6F6",
                    },
                    "black": Object {
                      "main": Object {
                        "RGB": "39,39,39",
                        "hex": "#272727",
                        "on": "#FFFFFF",
                      },
                      "tint20": Object {
                        "RGB": "236,236,236",
                        "hex": "#ECECEC",
                        "on": "#272727",
                      },
                      "tint40": Object {
                        "RGB": "199,199,199",
                        "hex": "#C7C7C7",
                        "on": "#272727",
                      },
                      "tint60": Object {
                        "RGB": "160,160,160",
                        "hex": "#A0A0A0",
                        "on": "#FFFFFF",
                      },
                      "tint80": Object {
                        "RGB": "105,105,105",
                        "hex": "#696969",
                        "on": "#FFFFFF",
                      },
                    },
                    "complimentary": Object {
                      "dark": Object {
                        "RGB": "206,185,0",
                        "hex": "#CEB900",
                        "on": "#272727",
                      },
                      "light": Object {
                        "RGB": "255,245,157",
                        "hex": "#FFF59D",
                        "on": "#272727",
                      },
                      "main": Object {
                        "RGB": "255,238,82",
                        "hex": "#FFEE52",
                        "on": "#272727",
                      },
                    },
                    "error": Object {
                      "dark": Object {
                        "RGB": "197,73,1",
                        "hex": "#C54901",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "255,115,32",
                        "hex": "#FF7320",
                        "on": "#FFFFFF",
                      },
                    },
                    "primary": Object {
                      "dark": Object {
                        "RGB": "102,22,20",
                        "hex": "#661614",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "218,52,47",
                        "hex": "#DA342F",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "164,40,36",
                        "hex": "#A42824",
                        "on": "#FFFFFF",
                      },
                    },
                    "secondary": Object {
                      "dark": Object {
                        "RGB": "5,38,59",
                        "hex": "#05263B",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "89,156,175",
                        "hex": "#599CAF",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "11,70,107",
                        "hex": "#0B466B",
                        "on": "#FFFFFF",
                      },
                    },
                    "surface": Object {
                      "RGB": "255,255,255",
                      "hex": "#FFFFFF",
                      "on": "#272727",
                    },
                    "white": Object {
                      "RGB": "255,255,255",
                      "hex": "#FFFFFF",
                      "on": "#272727",
                    },
                  },
                },
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Card__CardHeader-sc-100tkmv-1",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "padding:1rem 1rem 0.5rem;border-bottom:1px solid ",
                    [Function],
                    ";> h2{margin:0;color:",
                    [Function],
                    ";}display:block;",
                  ],
                },
                "displayName": "CardHeader",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Card__CardHeader-sc-100tkmv-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "79,38,98",
                    "hex": "#4E2662",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "173,101,207",
                    "hex": "#AD65CF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "116,60,143",
                    "hex": "#743C8F",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "206,185,0",
                    "hex": "#CEB900",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "255,245,157",
                    "hex": "#FFF59D",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "255,238,82",
                    "hex": "#FFEE52",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "197,73,1",
                    "hex": "#C54901",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "255,115,32",
                    "hex": "#FF7320",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "102,22,20",
                    "hex": "#661614",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "218,52,47",
                    "hex": "#DA342F",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "164,40,36",
                    "hex": "#A42824",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "5,38,59",
                    "hex": "#05263B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "89,156,175",
                    "hex": "#599CAF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "11,70,107",
                    "hex": "#0B466B",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <div
              className="c1 Card__CardHeader"
            >
              <h2>
                fooBar
              </h2>
            </div>
          </StyledComponent>
        </CardHeader>
        <CollapsibleContainer>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Card__CollapsibleContainer-sc-100tkmv-4",
                  "isStatic": false,
                  "lastClassName": "c2",
                  "rules": Array [
                    "overflow:hidden;transition:max-height 0.25s ease-in-out;max-height:",
                    [Function],
                    ";",
                  ],
                },
                "displayName": "CollapsibleContainer",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Card__CollapsibleContainer-sc-100tkmv-4",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c2"
            >
              <CardBody
                className="Card__CardBody"
              >
                <StyledComponent
                  className="Card__CardBody"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Card__CardBody-sc-100tkmv-2",
                        "isStatic": false,
                        "lastClassName": "c3",
                        "rules": Array [
                          "padding:",
                          [Function],
                          ";",
                        ],
                      },
                      "displayName": "CardBody",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Card__CardBody-sc-100tkmv-2",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="c3 Card__CardBody"
                  />
                </StyledComponent>
              </CardBody>
              <CardFooter
                theme={
                  Object {
                    "action": Object {
                      "dark": Object {
                        "RGB": "79,38,98",
                        "hex": "#4E2662",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "173,101,207",
                        "hex": "#AD65CF",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "116,60,143",
                        "hex": "#743C8F",
                        "on": "#FFFFFF",
                      },
                    },
                    "background": Object {
                      "RGB": "246,246,246",
                      "hex": "#F6F6F6",
                    },
                    "black": Object {
                      "main": Object {
                        "RGB": "39,39,39",
                        "hex": "#272727",
                        "on": "#FFFFFF",
                      },
                      "tint20": Object {
                        "RGB": "236,236,236",
                        "hex": "#ECECEC",
                        "on": "#272727",
                      },
                      "tint40": Object {
                        "RGB": "199,199,199",
                        "hex": "#C7C7C7",
                        "on": "#272727",
                      },
                      "tint60": Object {
                        "RGB": "160,160,160",
                        "hex": "#A0A0A0",
                        "on": "#FFFFFF",
                      },
                      "tint80": Object {
                        "RGB": "105,105,105",
                        "hex": "#696969",
                        "on": "#FFFFFF",
                      },
                    },
                    "complimentary": Object {
                      "dark": Object {
                        "RGB": "206,185,0",
                        "hex": "#CEB900",
                        "on": "#272727",
                      },
                      "light": Object {
                        "RGB": "255,245,157",
                        "hex": "#FFF59D",
                        "on": "#272727",
                      },
                      "main": Object {
                        "RGB": "255,238,82",
                        "hex": "#FFEE52",
                        "on": "#272727",
                      },
                    },
                    "error": Object {
                      "dark": Object {
                        "RGB": "197,73,1",
                        "hex": "#C54901",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "255,115,32",
                        "hex": "#FF7320",
                        "on": "#FFFFFF",
                      },
                    },
                    "primary": Object {
                      "dark": Object {
                        "RGB": "102,22,20",
                        "hex": "#661614",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "218,52,47",
                        "hex": "#DA342F",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "164,40,36",
                        "hex": "#A42824",
                        "on": "#FFFFFF",
                      },
                    },
                    "secondary": Object {
                      "dark": Object {
                        "RGB": "5,38,59",
                        "hex": "#05263B",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "89,156,175",
                        "hex": "#599CAF",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "11,70,107",
                        "hex": "#0B466B",
                        "on": "#FFFFFF",
                      },
                    },
                    "surface": Object {
                      "RGB": "255,255,255",
                      "hex": "#FFFFFF",
                      "on": "#272727",
                    },
                    "white": Object {
                      "RGB": "255,255,255",
                      "hex": "#FFFFFF",
                      "on": "#272727",
                    },
                  }
                }
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "_foldedDefaultProps": Object {
                        "theme": Object {
                          "action": Object {
                            "dark": Object {
                              "RGB": "79,38,98",
                              "hex": "#4E2662",
                              "on": "#FFFFFF",
                            },
                            "light": Object {
                              "RGB": "173,101,207",
                              "hex": "#AD65CF",
                              "on": "#FFFFFF",
                            },
                            "main": Object {
                              "RGB": "116,60,143",
                              "hex": "#743C8F",
                              "on": "#FFFFFF",
                            },
                          },
                          "background": Object {
                            "RGB": "246,246,246",
                            "hex": "#F6F6F6",
                          },
                          "black": Object {
                            "main": Object {
                              "RGB": "39,39,39",
                              "hex": "#272727",
                              "on": "#FFFFFF",
                            },
                            "tint20": Object {
                              "RGB": "236,236,236",
                              "hex": "#ECECEC",
                              "on": "#272727",
                            },
                            "tint40": Object {
                              "RGB": "199,199,199",
                              "hex": "#C7C7C7",
                              "on": "#272727",
                            },
                            "tint60": Object {
                              "RGB": "160,160,160",
                              "hex": "#A0A0A0",
                              "on": "#FFFFFF",
                            },
                            "tint80": Object {
                              "RGB": "105,105,105",
                              "hex": "#696969",
                              "on": "#FFFFFF",
                            },
                          },
                          "complimentary": Object {
                            "dark": Object {
                              "RGB": "206,185,0",
                              "hex": "#CEB900",
                              "on": "#272727",
                            },
                            "light": Object {
                              "RGB": "255,245,157",
                              "hex": "#FFF59D",
                              "on": "#272727",
                            },
                            "main": Object {
                              "RGB": "255,238,82",
                              "hex": "#FFEE52",
                              "on": "#272727",
                            },
                          },
                          "error": Object {
                            "dark": Object {
                              "RGB": "197,73,1",
                              "hex": "#C54901",
                              "on": "#FFFFFF",
                            },
                            "main": Object {
                              "RGB": "255,115,32",
                              "hex": "#FF7320",
                              "on": "#FFFFFF",
                            },
                          },
                          "primary": Object {
                            "dark": Object {
                              "RGB": "102,22,20",
                              "hex": "#661614",
                              "on": "#FFFFFF",
                            },
                            "light": Object {
                              "RGB": "218,52,47",
                              "hex": "#DA342F",
                              "on": "#FFFFFF",
                            },
                            "main": Object {
                              "RGB": "164,40,36",
                              "hex": "#A42824",
                              "on": "#FFFFFF",
                            },
                          },
                          "secondary": Object {
                            "dark": Object {
                              "RGB": "5,38,59",
                              "hex": "#05263B",
                              "on": "#FFFFFF",
                            },
                            "light": Object {
                              "RGB": "89,156,175",
                              "hex": "#599CAF",
                              "on": "#FFFFFF",
                            },
                            "main": Object {
                              "RGB": "11,70,107",
                              "hex": "#0B466B",
                              "on": "#FFFFFF",
                            },
                          },
                          "surface": Object {
                            "RGB": "255,255,255",
                            "hex": "#FFFFFF",
                            "on": "#272727",
                          },
                          "white": Object {
                            "RGB": "255,255,255",
                            "hex": "#FFFFFF",
                            "on": "#272727",
                          },
                        },
                      },
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Card__CardFooter-sc-100tkmv-3",
                        "isStatic": false,
                        "lastClassName": "c4",
                        "rules": Array [
                          "background-color:rgba(",
                          [Function],
                          ",0.4);border-radius:0 0 10px 10px;padding:0.5rem 1rem;display:flex;flex-flow:wrap row-reverse;",
                        ],
                      },
                      "displayName": "CardFooter",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Card__CardFooter-sc-100tkmv-3",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  theme={
                    Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "79,38,98",
                          "hex": "#4E2662",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "173,101,207",
                          "hex": "#AD65CF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "116,60,143",
                          "hex": "#743C8F",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "206,185,0",
                          "hex": "#CEB900",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "255,245,157",
                          "hex": "#FFF59D",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "255,238,82",
                          "hex": "#FFEE52",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "197,73,1",
                          "hex": "#C54901",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "255,115,32",
                          "hex": "#FF7320",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "102,22,20",
                          "hex": "#661614",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "218,52,47",
                          "hex": "#DA342F",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "164,40,36",
                          "hex": "#A42824",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "5,38,59",
                          "hex": "#05263B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "89,156,175",
                          "hex": "#599CAF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "11,70,107",
                          "hex": "#0B466B",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    }
                  }
                >
                  <div
                    className="c4"
                  >
                    this is the foot
                  </div>
                </StyledComponent>
              </CardFooter>
            </div>
          </StyledComponent>
        </CollapsibleContainer>
      </div>
    </StyledComponent>
  </CardContainer>
</Card>
`;

exports[`Card Component Renders while collapsed 1`] = `
.c0 {
  width: 100%;
  border-top: 4px solid #A42824;
  background-color: #FFFFFF;
}

.c2 {
  padding: 0;
}

.c1 {
  overflow: hidden;
  -webkit-transition: max-height 0.25s ease-in-out;
  transition: max-height 0.25s ease-in-out;
  max-height: 0;
}

<Card
  collapsed={true}
>
  <CardContainer
    collapsed={true}
    theme={
      Object {
        "action": Object {
          "dark": Object {
            "RGB": "79,38,98",
            "hex": "#4E2662",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "173,101,207",
            "hex": "#AD65CF",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "116,60,143",
            "hex": "#743C8F",
            "on": "#FFFFFF",
          },
        },
        "background": Object {
          "RGB": "246,246,246",
          "hex": "#F6F6F6",
        },
        "black": Object {
          "main": Object {
            "RGB": "39,39,39",
            "hex": "#272727",
            "on": "#FFFFFF",
          },
          "tint20": Object {
            "RGB": "236,236,236",
            "hex": "#ECECEC",
            "on": "#272727",
          },
          "tint40": Object {
            "RGB": "199,199,199",
            "hex": "#C7C7C7",
            "on": "#272727",
          },
          "tint60": Object {
            "RGB": "160,160,160",
            "hex": "#A0A0A0",
            "on": "#FFFFFF",
          },
          "tint80": Object {
            "RGB": "105,105,105",
            "hex": "#696969",
            "on": "#FFFFFF",
          },
        },
        "complimentary": Object {
          "dark": Object {
            "RGB": "206,185,0",
            "hex": "#CEB900",
            "on": "#272727",
          },
          "light": Object {
            "RGB": "255,245,157",
            "hex": "#FFF59D",
            "on": "#272727",
          },
          "main": Object {
            "RGB": "255,238,82",
            "hex": "#FFEE52",
            "on": "#272727",
          },
        },
        "error": Object {
          "dark": Object {
            "RGB": "197,73,1",
            "hex": "#C54901",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "255,115,32",
            "hex": "#FF7320",
            "on": "#FFFFFF",
          },
        },
        "primary": Object {
          "dark": Object {
            "RGB": "102,22,20",
            "hex": "#661614",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "218,52,47",
            "hex": "#DA342F",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "164,40,36",
            "hex": "#A42824",
            "on": "#FFFFFF",
          },
        },
        "secondary": Object {
          "dark": Object {
            "RGB": "5,38,59",
            "hex": "#05263B",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "89,156,175",
            "hex": "#599CAF",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "11,70,107",
            "hex": "#0B466B",
            "on": "#FFFFFF",
          },
        },
        "surface": Object {
          "RGB": "255,255,255",
          "hex": "#FFFFFF",
          "on": "#272727",
        },
        "white": Object {
          "RGB": "255,255,255",
          "hex": "#FFFFFF",
          "on": "#272727",
        },
      }
    }
  >
    <StyledComponent
      collapsed={true}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "_foldedDefaultProps": Object {
            "theme": Object {
              "action": Object {
                "dark": Object {
                  "RGB": "79,38,98",
                  "hex": "#4E2662",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "173,101,207",
                  "hex": "#AD65CF",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "116,60,143",
                  "hex": "#743C8F",
                  "on": "#FFFFFF",
                },
              },
              "background": Object {
                "RGB": "246,246,246",
                "hex": "#F6F6F6",
              },
              "black": Object {
                "main": Object {
                  "RGB": "39,39,39",
                  "hex": "#272727",
                  "on": "#FFFFFF",
                },
                "tint20": Object {
                  "RGB": "236,236,236",
                  "hex": "#ECECEC",
                  "on": "#272727",
                },
                "tint40": Object {
                  "RGB": "199,199,199",
                  "hex": "#C7C7C7",
                  "on": "#272727",
                },
                "tint60": Object {
                  "RGB": "160,160,160",
                  "hex": "#A0A0A0",
                  "on": "#FFFFFF",
                },
                "tint80": Object {
                  "RGB": "105,105,105",
                  "hex": "#696969",
                  "on": "#FFFFFF",
                },
              },
              "complimentary": Object {
                "dark": Object {
                  "RGB": "206,185,0",
                  "hex": "#CEB900",
                  "on": "#272727",
                },
                "light": Object {
                  "RGB": "255,245,157",
                  "hex": "#FFF59D",
                  "on": "#272727",
                },
                "main": Object {
                  "RGB": "255,238,82",
                  "hex": "#FFEE52",
                  "on": "#272727",
                },
              },
              "error": Object {
                "dark": Object {
                  "RGB": "197,73,1",
                  "hex": "#C54901",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "255,115,32",
                  "hex": "#FF7320",
                  "on": "#FFFFFF",
                },
              },
              "primary": Object {
                "dark": Object {
                  "RGB": "102,22,20",
                  "hex": "#661614",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "218,52,47",
                  "hex": "#DA342F",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "164,40,36",
                  "hex": "#A42824",
                  "on": "#FFFFFF",
                },
              },
              "secondary": Object {
                "dark": Object {
                  "RGB": "5,38,59",
                  "hex": "#05263B",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "89,156,175",
                  "hex": "#599CAF",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "11,70,107",
                  "hex": "#0B466B",
                  "on": "#FFFFFF",
                },
              },
              "surface": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
              "white": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
            },
          },
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Card__CardContainer-sc-100tkmv-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "width:100%;border-top:4px solid ",
              [Function],
              ";background-color:",
              [Function],
              ";box-shadow:",
              [Function],
              ";border-radius:",
              [Function],
              ";",
            ],
          },
          "displayName": "CardContainer",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Card__CardContainer-sc-100tkmv-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      theme={
        Object {
          "action": Object {
            "dark": Object {
              "RGB": "79,38,98",
              "hex": "#4E2662",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "173,101,207",
              "hex": "#AD65CF",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "116,60,143",
              "hex": "#743C8F",
              "on": "#FFFFFF",
            },
          },
          "background": Object {
            "RGB": "246,246,246",
            "hex": "#F6F6F6",
          },
          "black": Object {
            "main": Object {
              "RGB": "39,39,39",
              "hex": "#272727",
              "on": "#FFFFFF",
            },
            "tint20": Object {
              "RGB": "236,236,236",
              "hex": "#ECECEC",
              "on": "#272727",
            },
            "tint40": Object {
              "RGB": "199,199,199",
              "hex": "#C7C7C7",
              "on": "#272727",
            },
            "tint60": Object {
              "RGB": "160,160,160",
              "hex": "#A0A0A0",
              "on": "#FFFFFF",
            },
            "tint80": Object {
              "RGB": "105,105,105",
              "hex": "#696969",
              "on": "#FFFFFF",
            },
          },
          "complimentary": Object {
            "dark": Object {
              "RGB": "206,185,0",
              "hex": "#CEB900",
              "on": "#272727",
            },
            "light": Object {
              "RGB": "255,245,157",
              "hex": "#FFF59D",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "255,238,82",
              "hex": "#FFEE52",
              "on": "#272727",
            },
          },
          "error": Object {
            "dark": Object {
              "RGB": "197,73,1",
              "hex": "#C54901",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "255,115,32",
              "hex": "#FF7320",
              "on": "#FFFFFF",
            },
          },
          "primary": Object {
            "dark": Object {
              "RGB": "102,22,20",
              "hex": "#661614",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "218,52,47",
              "hex": "#DA342F",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "164,40,36",
              "hex": "#A42824",
              "on": "#FFFFFF",
            },
          },
          "secondary": Object {
            "dark": Object {
              "RGB": "5,38,59",
              "hex": "#05263B",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "89,156,175",
              "hex": "#599CAF",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "11,70,107",
              "hex": "#0B466B",
              "on": "#FFFFFF",
            },
          },
          "surface": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
          "white": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
        }
      }
    >
      <div
        className="c0"
      >
        <CollapsibleContainer
          collapsed={true}
        >
          <StyledComponent
            collapsed={true}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Card__CollapsibleContainer-sc-100tkmv-4",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "overflow:hidden;transition:max-height 0.25s ease-in-out;max-height:",
                    [Function],
                    ";",
                  ],
                },
                "displayName": "CollapsibleContainer",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Card__CollapsibleContainer-sc-100tkmv-4",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
            >
              <CardBody
                className="Card__CardBody"
              >
                <StyledComponent
                  className="Card__CardBody"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Card__CardBody-sc-100tkmv-2",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "padding:",
                          [Function],
                          ";",
                        ],
                      },
                      "displayName": "CardBody",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Card__CardBody-sc-100tkmv-2",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="c2 Card__CardBody"
                  />
                </StyledComponent>
              </CardBody>
            </div>
          </StyledComponent>
        </CollapsibleContainer>
      </div>
    </StyledComponent>
  </CardContainer>
</Card>
`;

exports[`Card Component Renders while not collapsed 1`] = `
.c0 {
  width: 100%;
  border-top: 4px solid #A42824;
  background-color: #FFFFFF;
  border-radius: 0 0 10px 10px;
}

.c2 {
  padding: 0;
}

.c1 {
  overflow: hidden;
  -webkit-transition: max-height 0.25s ease-in-out;
  transition: max-height 0.25s ease-in-out;
  max-height: 125rem;
}

<Card>
  <CardContainer
    theme={
      Object {
        "action": Object {
          "dark": Object {
            "RGB": "79,38,98",
            "hex": "#4E2662",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "173,101,207",
            "hex": "#AD65CF",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "116,60,143",
            "hex": "#743C8F",
            "on": "#FFFFFF",
          },
        },
        "background": Object {
          "RGB": "246,246,246",
          "hex": "#F6F6F6",
        },
        "black": Object {
          "main": Object {
            "RGB": "39,39,39",
            "hex": "#272727",
            "on": "#FFFFFF",
          },
          "tint20": Object {
            "RGB": "236,236,236",
            "hex": "#ECECEC",
            "on": "#272727",
          },
          "tint40": Object {
            "RGB": "199,199,199",
            "hex": "#C7C7C7",
            "on": "#272727",
          },
          "tint60": Object {
            "RGB": "160,160,160",
            "hex": "#A0A0A0",
            "on": "#FFFFFF",
          },
          "tint80": Object {
            "RGB": "105,105,105",
            "hex": "#696969",
            "on": "#FFFFFF",
          },
        },
        "complimentary": Object {
          "dark": Object {
            "RGB": "206,185,0",
            "hex": "#CEB900",
            "on": "#272727",
          },
          "light": Object {
            "RGB": "255,245,157",
            "hex": "#FFF59D",
            "on": "#272727",
          },
          "main": Object {
            "RGB": "255,238,82",
            "hex": "#FFEE52",
            "on": "#272727",
          },
        },
        "error": Object {
          "dark": Object {
            "RGB": "197,73,1",
            "hex": "#C54901",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "255,115,32",
            "hex": "#FF7320",
            "on": "#FFFFFF",
          },
        },
        "primary": Object {
          "dark": Object {
            "RGB": "102,22,20",
            "hex": "#661614",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "218,52,47",
            "hex": "#DA342F",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "164,40,36",
            "hex": "#A42824",
            "on": "#FFFFFF",
          },
        },
        "secondary": Object {
          "dark": Object {
            "RGB": "5,38,59",
            "hex": "#05263B",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "89,156,175",
            "hex": "#599CAF",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "11,70,107",
            "hex": "#0B466B",
            "on": "#FFFFFF",
          },
        },
        "surface": Object {
          "RGB": "255,255,255",
          "hex": "#FFFFFF",
          "on": "#272727",
        },
        "white": Object {
          "RGB": "255,255,255",
          "hex": "#FFFFFF",
          "on": "#272727",
        },
      }
    }
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "_foldedDefaultProps": Object {
            "theme": Object {
              "action": Object {
                "dark": Object {
                  "RGB": "79,38,98",
                  "hex": "#4E2662",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "173,101,207",
                  "hex": "#AD65CF",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "116,60,143",
                  "hex": "#743C8F",
                  "on": "#FFFFFF",
                },
              },
              "background": Object {
                "RGB": "246,246,246",
                "hex": "#F6F6F6",
              },
              "black": Object {
                "main": Object {
                  "RGB": "39,39,39",
                  "hex": "#272727",
                  "on": "#FFFFFF",
                },
                "tint20": Object {
                  "RGB": "236,236,236",
                  "hex": "#ECECEC",
                  "on": "#272727",
                },
                "tint40": Object {
                  "RGB": "199,199,199",
                  "hex": "#C7C7C7",
                  "on": "#272727",
                },
                "tint60": Object {
                  "RGB": "160,160,160",
                  "hex": "#A0A0A0",
                  "on": "#FFFFFF",
                },
                "tint80": Object {
                  "RGB": "105,105,105",
                  "hex": "#696969",
                  "on": "#FFFFFF",
                },
              },
              "complimentary": Object {
                "dark": Object {
                  "RGB": "206,185,0",
                  "hex": "#CEB900",
                  "on": "#272727",
                },
                "light": Object {
                  "RGB": "255,245,157",
                  "hex": "#FFF59D",
                  "on": "#272727",
                },
                "main": Object {
                  "RGB": "255,238,82",
                  "hex": "#FFEE52",
                  "on": "#272727",
                },
              },
              "error": Object {
                "dark": Object {
                  "RGB": "197,73,1",
                  "hex": "#C54901",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "255,115,32",
                  "hex": "#FF7320",
                  "on": "#FFFFFF",
                },
              },
              "primary": Object {
                "dark": Object {
                  "RGB": "102,22,20",
                  "hex": "#661614",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "218,52,47",
                  "hex": "#DA342F",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "164,40,36",
                  "hex": "#A42824",
                  "on": "#FFFFFF",
                },
              },
              "secondary": Object {
                "dark": Object {
                  "RGB": "5,38,59",
                  "hex": "#05263B",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "89,156,175",
                  "hex": "#599CAF",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "11,70,107",
                  "hex": "#0B466B",
                  "on": "#FFFFFF",
                },
              },
              "surface": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
              "white": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
            },
          },
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Card__CardContainer-sc-100tkmv-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "width:100%;border-top:4px solid ",
              [Function],
              ";background-color:",
              [Function],
              ";box-shadow:",
              [Function],
              ";border-radius:",
              [Function],
              ";",
            ],
          },
          "displayName": "CardContainer",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Card__CardContainer-sc-100tkmv-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      theme={
        Object {
          "action": Object {
            "dark": Object {
              "RGB": "79,38,98",
              "hex": "#4E2662",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "173,101,207",
              "hex": "#AD65CF",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "116,60,143",
              "hex": "#743C8F",
              "on": "#FFFFFF",
            },
          },
          "background": Object {
            "RGB": "246,246,246",
            "hex": "#F6F6F6",
          },
          "black": Object {
            "main": Object {
              "RGB": "39,39,39",
              "hex": "#272727",
              "on": "#FFFFFF",
            },
            "tint20": Object {
              "RGB": "236,236,236",
              "hex": "#ECECEC",
              "on": "#272727",
            },
            "tint40": Object {
              "RGB": "199,199,199",
              "hex": "#C7C7C7",
              "on": "#272727",
            },
            "tint60": Object {
              "RGB": "160,160,160",
              "hex": "#A0A0A0",
              "on": "#FFFFFF",
            },
            "tint80": Object {
              "RGB": "105,105,105",
              "hex": "#696969",
              "on": "#FFFFFF",
            },
          },
          "complimentary": Object {
            "dark": Object {
              "RGB": "206,185,0",
              "hex": "#CEB900",
              "on": "#272727",
            },
            "light": Object {
              "RGB": "255,245,157",
              "hex": "#FFF59D",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "255,238,82",
              "hex": "#FFEE52",
              "on": "#272727",
            },
          },
          "error": Object {
            "dark": Object {
              "RGB": "197,73,1",
              "hex": "#C54901",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "255,115,32",
              "hex": "#FF7320",
              "on": "#FFFFFF",
            },
          },
          "primary": Object {
            "dark": Object {
              "RGB": "102,22,20",
              "hex": "#661614",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "218,52,47",
              "hex": "#DA342F",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "164,40,36",
              "hex": "#A42824",
              "on": "#FFFFFF",
            },
          },
          "secondary": Object {
            "dark": Object {
              "RGB": "5,38,59",
              "hex": "#05263B",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "89,156,175",
              "hex": "#599CAF",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "11,70,107",
              "hex": "#0B466B",
              "on": "#FFFFFF",
            },
          },
          "surface": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
          "white": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
        }
      }
    >
      <div
        className="c0"
      >
        <CollapsibleContainer>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Card__CollapsibleContainer-sc-100tkmv-4",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "overflow:hidden;transition:max-height 0.25s ease-in-out;max-height:",
                    [Function],
                    ";",
                  ],
                },
                "displayName": "CollapsibleContainer",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Card__CollapsibleContainer-sc-100tkmv-4",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
            >
              <CardBody
                className="Card__CardBody"
              >
                <StyledComponent
                  className="Card__CardBody"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Card__CardBody-sc-100tkmv-2",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "padding:",
                          [Function],
                          ";",
                        ],
                      },
                      "displayName": "CardBody",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Card__CardBody-sc-100tkmv-2",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="c2 Card__CardBody"
                  />
                </StyledComponent>
              </CardBody>
            </div>
          </StyledComponent>
        </CollapsibleContainer>
      </div>
    </StyledComponent>
  </CardContainer>
</Card>
`;
